random error in VPlayback should be fixed. managed to do whatsapp-style playback, but can never make the ripples align perfectly with knob from start to end, so it is not worth it

--- a/voicewake/static/css/output.css
+++ b/voicewake/static/css/output.css
@@ -630,10 +630,6 @@ video {
   bottom: 0.5rem;
 }
 
-.bottom-4 {
-  bottom: 1rem;
-}
-
 .bottom-\[110\%\] {
   bottom: 110%;
 }
@@ -684,6 +680,10 @@ video {
 
 .top-5 {
   top: 1.25rem;
+}
+
+.-z-10 {
+  z-index: -10;
 }
 
 .z-10 {
@@ -769,6 +769,11 @@ video {
   margin-bottom: auto;
 }
 
+.mx-4 {
+  margin-left: 1rem;
+  margin-right: 1rem;
+}
+
 .mb-0 {
   margin-bottom: 0px;
 }
@@ -809,8 +814,16 @@ video {
   margin-top: 2rem;
 }
 
+.mt-\[25\%\] {
+  margin-top: 25%;
+}
+
 .mt-\[4\.5rem\] {
   margin-top: 4.5rem;
+}
+
+.ml-2 {
+  margin-left: 0.5rem;
 }
 
 .box-content {
@@ -946,6 +959,10 @@ video {
   height: 100%;
 }
 
+.h-screen {
+  height: 100vh;
+}
+
 .min-h-\[calc\(100vh-4\.5rem\)\] {
   min-height: calc(100vh - 4.5rem);
 }
@@ -1009,6 +1026,10 @@ video {
 
 .w-full {
   width: 100%;
+}
+
+.w-\[40\%\] {
+  width: 40%;
 }
 
 .shrink-0 {
@@ -1086,25 +1107,15 @@ video {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
-.rotate-90 {
-  --tw-rotate: 90deg;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.rotate-180 {
-  --tw-rotate: 180deg;
+.scale-0 {
+  --tw-scale-x: 0;
+  --tw-scale-y: 0;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 .scale-50 {
   --tw-scale-x: .5;
   --tw-scale-y: .5;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.scale-0 {
-  --tw-scale-x: 0;
-  --tw-scale-y: 0;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
@@ -1233,6 +1244,10 @@ video {
 
 .gap-6 {
   gap: 1.5rem;
+}
+
+.gap-10 {
+  gap: 2.5rem;
 }
 
 .gap-x-2 {
@@ -1381,17 +1396,8 @@ video {
   background-color: rgb(68 68 68 / var(--tw-bg-opacity));
 }
 
-.bg-theme-black\/40 {
-  background-color: rgb(68 68 68 / 0.4);
-}
-
 .bg-theme-danger\/90 {
   background-color: rgb(250 53 21 / 0.9);
-}
-
-.bg-theme-green-1 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(144 169 85 / var(--tw-bg-opacity));
 }
 
 .bg-theme-lead {
@@ -1453,18 +1459,6 @@ video {
 
 .to-theme-black {
   --tw-gradient-to: #444444 var(--tw-gradient-to-position);
-}
-
-.fill-theme-green-1 {
-  fill: #90a955;
-}
-
-.fill-theme-green-2 {
-  fill: #4f772d;
-}
-
-.fill-theme-green-3 {
-  fill: #31572c;
 }
 
 .p-1 {
@@ -1682,10 +1676,6 @@ video {
   color: rgb(68 68 68 / 0);
 }
 
-.text-theme-black\/10 {
-  color: rgb(68 68 68 / 0.1);
-}
-
 .text-theme-danger {
   --tw-text-opacity: 1;
   color: rgb(250 53 21 / var(--tw-text-opacity));
@@ -1699,10 +1689,6 @@ video {
 .text-theme-light {
   --tw-text-opacity: 1;
   color: rgb(242 244 243 / var(--tw-text-opacity));
-}
-
-.text-theme-light\/50 {
-  color: rgb(242 244 243 / 0.5);
 }
 
 .text-theme-toast-danger {
@@ -1777,6 +1763,81 @@ video {
 
 .shadow-theme-soft-danger\/75 {
   --tw-shadow-color: rgb(255 73 52 / 0.75);
+  --tw-shadow: var(--tw-shadow-colored);
+}
+
+.shadow-cyan-950 {
+  --tw-shadow-color: #083344;
+  --tw-shadow: var(--tw-shadow-colored);
+}
+
+.shadow-cyan-950\/30 {
+  --tw-shadow-color: rgb(8 51 68 / 0.3);
+  --tw-shadow: var(--tw-shadow-colored);
+}
+
+.shadow-cyan-950\/20 {
+  --tw-shadow-color: rgb(8 51 68 / 0.2);
+  --tw-shadow: var(--tw-shadow-colored);
+}
+
+.shadow-cyan-950\/40 {
+  --tw-shadow-color: rgb(8 51 68 / 0.4);
+  --tw-shadow: var(--tw-shadow-colored);
+}
+
+.shadow-blue-950\/40 {
+  --tw-shadow-color: rgb(23 37 84 / 0.4);
+  --tw-shadow: var(--tw-shadow-colored);
+}
+
+.shadow-blue-800\/40 {
+  --tw-shadow-color: rgb(30 64 175 / 0.4);
+  --tw-shadow: var(--tw-shadow-colored);
+}
+
+.shadow-blue-900\/30 {
+  --tw-shadow-color: rgb(30 58 138 / 0.3);
+  --tw-shadow: var(--tw-shadow-colored);
+}
+
+.shadow-blue-950\/30 {
+  --tw-shadow-color: rgb(23 37 84 / 0.3);
+  --tw-shadow: var(--tw-shadow-colored);
+}
+
+.shadow-indigo-900\/30 {
+  --tw-shadow-color: rgb(49 46 129 / 0.3);
+  --tw-shadow: var(--tw-shadow-colored);
+}
+
+.shadow-purple-900\/30 {
+  --tw-shadow-color: rgb(88 28 135 / 0.3);
+  --tw-shadow: var(--tw-shadow-colored);
+}
+
+.shadow-theme-lead\/60 {
+  --tw-shadow-color: rgb(250 204 21 / 0.6);
+  --tw-shadow: var(--tw-shadow-colored);
+}
+
+.shadow-theme-lead\/50 {
+  --tw-shadow-color: rgb(250 204 21 / 0.5);
+  --tw-shadow: var(--tw-shadow-colored);
+}
+
+.shadow-\[\#0c0a01\]\/30 {
+  --tw-shadow-color: rgb(12 10 1 / 0.3);
+  --tw-shadow: var(--tw-shadow-colored);
+}
+
+.shadow-\[\#0c0a01\]\/20 {
+  --tw-shadow-color: rgb(12 10 1 / 0.2);
+  --tw-shadow: var(--tw-shadow-colored);
+}
+
+.shadow-\[\#0c0a01\]\/10 {
+  --tw-shadow-color: rgb(12 10 1 / 0.1);
   --tw-shadow: var(--tw-shadow-colored);
 }
 
@@ -1916,7 +1977,7 @@ video {
 /*much prefer this over plain focus, that way focus only appears when necessary*/
 
 *:focus-visible {
-  outline-width: 2px;
+  outline-width: 1px;
   outline-color: blueviolet;
   outline-offset: 2px;
 }
@@ -2156,6 +2217,11 @@ textarea {
   --tw-shadow: var(--tw-shadow-colored);
 }
 
+.hover\:shadow-theme-lead\/60:hover {
+  --tw-shadow-color: rgb(250 204 21 / 0.6);
+  --tw-shadow: var(--tw-shadow-colored);
+}
+
 .focus\:border-theme-black:focus {
   --tw-border-opacity: 1;
   border-color: rgb(68 68 68 / var(--tw-border-opacity));
@@ -2212,6 +2278,10 @@ textarea {
 
   .sm\:hidden {
     display: none;
+  }
+
+  .sm\:w-3\/4 {
+    width: 75%;
   }
 
   .sm\:grid-cols-8 {
